--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -748,7 +748,7 @@
  flavor_eng.EVTOPTA9143:0 "我々は彼らを粉砕するだろう！"
  flavor_eng.EVTOPTB9143:0 "スチュアートは王位を取り戻す！"
  flavor_eng.EVTNAME9144:0 "大ウィリアム・ピット"
- flavor_eng.EVTDESC9144:0 "初代のピット（1708-1778）であるウィリアム・ピットは、マドラス総督の孫であった。当初は軍人としての経歴を歩んでいたが、ホイッグ党の庶民院の議員となり、熱烈な愛国者となった。イングランドに世界の海洋帝国としての地位を与えるように努力し、ジョージ2世の深い憎しみにもかかわらず、1757年の連立政権を率いて、カナダとインドで決定的な成果を得た。1763年の彼の出発は、七年戦争を終結させたパリ条約の最も厳しい条項からフランスを救った。1766年〜1778年には健康に恵まれなかったにもかかわらず、1778年にフランスとの戦争を提唱した。"
+ flavor_eng.EVTDESC9144:0 "初代のピット（1708-1778）であるウィリアム・ピットは、マドラス総督の孫であった。当初は軍人としての経歴を歩んでいたが、ホイッグ党の庶民院の議員となり、熱烈な愛国者となった。イングランドに世界の海洋帝国としての地位を与えるように努力し、ジョージ2世の深い憎しみにもかかわらず、1757年の連立政権を率いて、カナダとインドで決定的な成果を得た。1763年の彼の出発は、七年戦争を終結させたパリ条約の最も厳しい条項からフランスを救った。1766年-1778年には健康に恵まれなかったにもかかわらず、1778年にフランスとの戦争を提唱した。"
  flavor_eng.EVTOPTA9144:0 "優秀な大臣だ！"
  flavor_eng.EVTNAME9145:0 "東インド会社"
  flavor_eng.EVTDESC9145:0 "イングランド東インド会社は、2年前に創設されていたオランダ東インド会社により、困難な始まりとなった。 モルッカ諸島（アンボン）とインドネシアの最初の交易所はすぐに圧倒され、オランダのインド（マドラス、ボンベイ、カルカッタ）に集中した活動により閉鎖された。彼女は、港湾工場の小さな商社から、インド亜大陸の大部分を支配するウォーレン・ヘイスティングスとロバート・クライヴ（1757年以降）の大規模なインド帝国建設まで、その最大の成功を見てきた。同社はすべての競争相手よりも長く続き、1857年の大規模なセポイの反乱の後、1867年に英国政府に引き継がれることとなった。"
@@ -1074,7 +1074,7 @@
  flavor_swe.EVTOPTA3258:0 "キャップ党を勝利させる。"
  flavor_swe.EVTOPTB3258:0 "ハット党を勝利させる。"
  flavor_swe.EVTNAME3262:0 "政変と啓蒙専制君主"
- flavor_swe.EVTDESC3262:0 "グスタフ3世は、スウェーデンの王位を継承すると、ハット党とキャップ党の麻痺した議論によって、国が混乱の騒ぎに陥ったのを見た。何かが、しかもすぐに行われなければならず、さもなければスウェーデンは貧しく不幸なポーランドと同じ運命を共有することになるかもしれなかった。だから、むしろスキュラとカリュブディスによって国家が引き裂かれるのを黙って見ているよりは、王は自分自身で問題を取り上げることを選び、無血のクーデターを通じて権力を握った。こうしてスウェーデンの歴史のグスタフの時代が始まった。"
+ flavor_swe.EVTDESC3262:0 "グスタフ3世は、スウェーデンの王位を継承すると、ハット党とキャップ党の麻痺した議論によって、国が混乱の騒ぎに陥ったのを見た。何かが、しかもすぐに行われなければならず、さもなければスウェーデンは貧しく不幸なポーランドと同じ運命を共有することになるかもしれなかった。だから、むしろスキュラとカリュブディスによって国家が引き裂かれるのを黙って見ているよりは、王は自分自身で問題を取り上げることを選び、無血クーデターを通じて権力を握った。こうしてスウェーデンの歴史におけるグスタフの時代が始まった。"
  flavor_swe.EVTOPTA3262:0 "王は支配するべきだ！"
  flavor_swe.EVTOPTB3262:0 "暴君はいらない！"
  the_dacke_feud.1.t:0 "ダッケ戦争"
@@ -1974,7 +1974,7 @@
  janissary_decadence.100.da:0 "イェニチェリ全員の名簿の全てを検査させることで、[Root.Monarch.GetName]は最終的に何とかこの軍団を再び支配することができた。全ての悪い要素と非戦闘員は組織から取り除かれ、国からの報酬やイェニチェリであることで付随する地位はもはや受け取れないだろう。"
  janissary_decadence.100.a:0 "選択の余地はないだろう。"
  janissary_decadence_trigger:0 "§Yイェニチェリ§!の補正を取得してから100年が経過しました。"
- janissary_disaster_notifier:2 "§Y大航海時代§!より後の時代では§Yイェニチェリ軍団§!の国難が発生するかもしれません"
+ janissary_disaster_notifier:2 "§Y大航海時代§!より後の時代では§Yイェニチェリ軍団§!の国難が発生するかもしれません。"
  disband_the_janissaries_title:1 "イェニチェリは検査を受ける"
  disband_the_janissaries_desc:1 "イェニチェリの給与者名簿の中には、本当はイェニチェリでない者や本当は軍務には適さない者が多数いる。誰をまだ名簿に残すべきか総点検を強制し、この一団に秩序と鍛錬をもたらすようにしよう。"
  yoklama_effect_tooltip:0 "§Rイェニチェリはこの決断を認められず、幾らかはこの決定によって反乱を起こすだろう。§!"
@@ -2186,7 +2186,7 @@
  flavor_dan.8.a:0 "美徳は道を示してくれるだろう。"
  flavor_dan.8.b:0 "我々は、事前にいかなる約束もすることはできない。"
  flavor_dan.9.t:0 "ニシンは取り尽くされた"
- flavor_dan.9.d:0 "スコーネのスカノール・ファルステルボ沖の海域は、「短剣でそれらを刈ることができる」ように、ニシンで満ちていた。 スコーネの市場は、西ヨーロッパから東部の港に来る品物の主要な集散地であるだけでなく、バルト海での魚の輸出の主要な集散地でもある。\nしかし、近年はニシンはあまり豊富ではなく、今年の漁獲は市場自体を支えることが不可能なほど貧しいものであった。スコーネの市場が死ねば、王国の主要な収入源の一つが失われる。"
+ flavor_dan.9.d:0 "スコーネのスカノール・ファルステルボ沖の海域は、「短剣でそれらを刈ることができる」ように、ニシンで満ちていた。スコーネの市場は、西ヨーロッパから東部の港に来る品物の主要な集散地であるだけでなく、バルト海での魚の輸出の主要な集散地でもある。\nしかし、近年はニシンはあまり豊富ではなく、今年の漁獲は市場自体を支えることが不可能なほど貧しいものであった。スコーネの市場が死ねば、王国の主要な収入源の一つが失われる。"
  flavor_dan.9.a:0 "残念だ。"
  flavor_dan.10.t:0 "インド"
  flavor_dan.10.d:0 "ヤン・デ・ウィルム、ハーマン・ローゼンクランツ、ローラン・クラッペが率いる商人の団体が、インドでデンマークの植民地を確立するための勅許を受けることを求めて、[Root.Monarch.GetName]に接触してきた。商人達は、すでにセイロン王とタンジョールのラージャとの関係をすでに確立していると主張しており、実際にこれらの主張の背後にはどれほどのものがあるのか​​は不明だが、彼らは地域をかなりよく知っていることは明らかである。我々が彼らにインドにおける勅許を与えれば、彼らはインドでにおけるデンマークの影響力を確立し、地域での利益を高めることを試みるだろう。"
@@ -2492,7 +2492,7 @@
  flavor_brapru.35.d:0 "カントルであり、灰色修道院ギムナジウムの教師でもあったヨハン・クリューガーは、音楽会の作曲家や音楽教育の著名な作家としてかなり知られるようになった。クリューガーはまた、数年を費やして、歌による敬虔の修練、または敬虔の実践として知られる240以上の賛美歌の素晴らしい本をまとめた。その意図は、ドイツの土地の多くの忠実な人々の恩恵となるよう新しい賛美歌を追加することであった。この本はすでにドイツの忠実なプロテスタントの間で広く普及しており、その人気は高まり続けている。"
  flavor_brapru.35.a:0 "いざやもろびと神に感謝せよ。"
  flavor_brapru.36.t:0 "軍隊が国家を持つ"
- flavor_brapru.36.d:0 "国家が支援できる常設の軍隊を増やすための様々な方法が過去に行われてきたが、彼らの必要性には十分ではなかった。我々の官僚制がより厳格な体制を支援するのに十分に進んだことで、[Root.Monarch.GetName]は古い州の民兵と傭兵を完全に改造する計画を策定した。\n国家はカントンごとに分割され、そこに住むそれぞれの男性は軍隊に入隊することが要求される。民間人の関与は限定されるべきであり、代わりに[Root.Monarch.GetName]は各連隊の軍事管理者がカントン内での募集を担当することを意図している。"
+ flavor_brapru.36.d:0 "国家が支援できる常設の軍隊を増やすための様々な方法が過去に行われてきたが、我々が必要とするものから見れば十分ではなかった。我々の官僚制がより厳格な体制を支援するのに十分に進んだことで、[Root.Monarch.GetName]は古い州の民兵と傭兵を完全に改造する計画を策定した。\n国家はカントンごとに分割され、そこに住むそれぞれの男性は軍隊に入隊することが要求される。民間人の関与は限定されるべきであり、代わりに[Root.Monarch.GetName]は各連隊の軍事管理者がカントン内での募集を担当することを意図している。"
  flavor_brapru.36.a:0 "プロイセンは国家が軍隊を持つに非ず。軍隊が国家を持つものなり。"
  flavor_brapru.36.a.tt:0 "カントン制度は、我々の人口から予想される何倍もの軍隊を何度も徴兵することを可能にする。"
  flavor_brapru.36.b:0 "我々は、軍事的な必要性が国家の必要性に指図するようにすることはできない！"
@@ -2899,7 +2899,7 @@
  flavor_vij.EVTNAME10:0 "ビャサターサ"
  flavor_vij.EVTDESC10:0 "学者ビャサターサは、ドヴァイタ・ヴェーダーンタ（ヴェーダの二元論的結論）学派の3つの霊的な光またはムニトリアムの一つとして評価されている。彼の反対者さえも、彼が彼に反対するすべての思想学派についての明確な理解と解説を持ち合わせていることを賞賛した。ビャサターサは論理と哲学における議論と対話の熟練者で、クリシュナ・デーヴァ・ラーヤ治世下でヴィジャヤナガル王国に大きな影響を与えた。王はビャサターサに最大の関心と敬意を払った。クリシュナ・デーヴァ・ラーヤはこの学者を彼のクラデヴァータ（一族の守り神）や教師以上のものとみなした。ビャサターサの有名な作品には、ニャヤムリタム（論理の蜜）、タルカタンダバ（論理の踊り）、タパパヤ・チャンドリカ（解説の月光）、マヤバダ・カンダナ・マンダラマンジャリ、アップダディ・カンダナ・マンダラマンジャリ、プラパンチャ・ミディアヴィニマーナ・カンダナ・マンダラマンジャリ、タッタバヴィヴェカ・マンダラマンジャリ、ヴィドジジーバナそしてサッタークヴァスタが含まれている。"
  flavor_ayu.EVTNAME1:0 "ボーロマ･トライローカナートの改革"
- flavor_ayu.EVTDESC1:0 "国王ボーロマ･トライローカナート王は国の政府を効率化しようとして、様々な改革を提案している。それらの多くは優れた効果を挙げる一方で、高くもつくでしょうし、社会不安も引き起こすかもしれない。我々はどうするべきだろうか？"
+ flavor_ayu.EVTDESC1:0 "国王ボーロマ･トライローカナート王は国の政府を効率化しようとして、様々な改革を提案している。それらの多くは優れた効果を挙げる一方で、高くつくだろうし、社会不安も引き起こすかもしれない。我々はどうするべきだろうか？"
  flavor_ayu.EVTOPTA1:0 "改革とともに進もう。"
  flavor_ayu.EVTOPTB1:0 "改革の考えを無視する。"
  flavor_ayu.EVTNAME2:0 "チャクラパット王の軍改革"
@@ -3327,7 +3327,7 @@
  flavor_nor.21.d:0 "大胆な攻撃と巧妙な操船によって、ペーター・ヤンセン・ウェッセルはノルウェー海軍の有力な船長として名を上げている。ウェッセルの不本意な戦闘からの後退さえも、関係する船舶の規模やその他の状況にかかわらず、彼は実力で出世し続けた。今日、彼は海上における彼の偉大な功績により、爵位を与えられるために[Root.Monarch.GetName]の前に立っている。"
  flavor_nor.21.a:0 "今より、彼は「トルデンスキョルド」－雷の盾として知られるだろう！"
  flavor_nor.22.t:0 "コート・アドラー"
- flavor_nor.22.d:0 "15歳の若い船乗りの息子であったコート・アドラーは、ノルウェーを外海の後ろに残し、それ以来、低地諸国、地中海、そして遠くはインドのコロマンデル海岸で商船の船長として成功した。オランダ、イングランド、ヴェネツィア、トルコ海軍との交戦で戦時に船長を務めていたアデラーは、彼の世代ではほとんど経験のない経験と人脈とを持っている。彼は様々な商業的な事業を通じ、かなりの個人的な富を獲得しており、そのうちのいくつかは彼の母国、特に彼がノルウェーの都市であるシーエンの郊外で開発し始めた財産に投資されている。\nアドラーのような手腕の人物は、国家への奉仕において確実に有効に使えるだろう。"
+ flavor_nor.22.d:0 "15歳の若い船乗りの息子であったコート・アドラーは、ノルウェーを外海の後ろに残し、それ以来、低地諸国、地中海、そして遠くはインドのコロマンデル海岸で商船の船長として成功した。オランダ、イングランド、ヴェネツィア、トルコ海軍との交戦で戦時に船長を務めていたアデラーは、彼の世代にはほとんどない経験と人脈とを持っている。彼は様々な商業的な事業を通じ、かなりの個人的な富を獲得しており、そのうちのいくつかは彼の母国、特に彼がノルウェーの都市であるシーエンの郊外で開発し始めた財産に投資されている。\nアドラーのような手腕の人物は、国家への奉仕において確実に有効に使えるだろう。"
  flavor_nor.22.a:0 "注目に値する男だ！"
  flavor_nor.23.t:0 "オスロの大火"
  flavor_nor.23.d:0 "3日間、火災は木造の都市であるオスロを破壊し、今では国の首都のいくつかの建物を除いてすべてが灰に覆われている。火災がオスロを悩ませ、我々が今直面している破壊が完全に終わる前に、我々が再建するにあたって、都市を完全に移転すべきとの提案がなされた。木材で建設し、次の大惨事を待つ代わりに、我々の時代の首都にふさわしい建築と都市計画の巧みな技術を使って、アーケシュフース要塞の近くに再建することが提案されている。\nアーケシュフースに近いところで再建することで、我々は都市を適切に強化することができ、これらの時代に大きな利益をもたらすことができる。実際には以前の支配者はオスロの市民が希望する材料と様式で再建するのを難しくしていたので、適切な改修は非常にコストがかかる可能性が高い。"
@@ -3481,7 +3481,7 @@
  flavor_dai.EVTOPTB1:0 "外交改革を行う。"
  flavor_dai.EVTOPTC1:0 "軍事改革を行う。"
  flavor_dai.EVTNAME2:0 "莫と鄭一族のライバル関係"
- flavor_dai.EVTDESC2:0 "二つの偉大な一族、莫と鄭が、摂政の権力をめぐり争っている。このような権力闘争のために、国家は、武装した兵士が片方を支えているか、あるいは田舎を徘徊している状態で、アナーキーに陥っています。我々は、彼らの反目がすぐに終わることを願うだけである。"
+ flavor_dai.EVTDESC2:0 "二つの偉大な一族、莫と鄭が、摂政の権力をめぐり争っている。このような権力闘争のために、国家は無政府状態に陥り、武装した兵士たちは一方または他方を支えて田舎を徘徊している。我々は、彼らの反目がすぐに終わることを願うだけである。"
  flavor_dai.EVTOPTA2:0 "彼らの果てしない反目を呪う！"
  flavor_dai.EVTOPTB2:0 "確執は今、止める必要がある。"
  flavor_dai.EVTNAME3:0 "鄭の子孫の反乱"
@@ -3538,7 +3538,7 @@
  flavor_tus.13.d:0 "サヴォナローラの指導の下で、$CAPITAL$の人々は、使徒たちが神聖な大地を歩いて以来、より敬虔である。結局のところ、神が彼らに慈悲を見せるという希望はあるのだろうか？"
  flavor_tus.13.a:0 "神は彼の群れを気にかけるだろう！"
  flavor_tus.14.t:0 "共和制の実践の改革"
- flavor_tus.14.d:0 "サヴォナローラの偉大な使命は、$CAPITAL$の浄化だけではなく、その都市への市民の帰還である。 $CAPITAL$を共和国の栄光の日に戻すには多くの作業が必要だが、最初の一歩である急進的な措置を踏み出さなければ、何の作業も行うことはできない"
+ flavor_tus.14.d:0 "サヴォナローラの偉大な使命は、$CAPITAL$の浄化だけではなく、その都市への市民の帰還である。 $CAPITAL$を共和国の栄光の日に戻すには多くの作業が必要だが、最初の一歩である急進的な措置を踏み出さなければ、何の作業も行うことはできない。"
  flavor_tus.14.a:0 "我々はフィレンツェの人々のために統治している。"
  flavor_tus.14.b:0 "人々には厳格な指導が必要だ。"
  flavor_tus.15.t:0 "人々は[Root.Monarch.GetTitle][Root.Monarch.GetName]に対して背を向ける"
@@ -3626,7 +3626,7 @@
  missionaries_rebuffed:0 "宣教師ははねつけられた。"
  missionaries_accepted:0 "宣教師は受け入れられた。"
  flavor_kon.2.t:0 "宣教師たちはコンゴに入った！"
- flavor_kon.2.d:0 "中央アフリカの海岸にある異教徒の国家であるコンゴ王国は、宣教師に対してキリストの言葉を彼らの王国に広めることに同意した。彼らの州の一つでは数千人が教会に加わり、その土地全体に司教と教会の建設を求めています！"
+ flavor_kon.2.d:0 "中央アフリカの海岸にある異教徒の国家であるコンゴ王国は、宣教師に対してキリストの言葉を彼らの王国に広めることに同意した。彼らの州の一つでは数千人が教会に加わり、その土地全体に司教と教会の建設を求めている！"
  flavor_kon.2.a:0 "良い知らせだ！"
  flavor_kon.3.t:0 "宣教師ははねつけられた！"
  flavor_kon.3.d:0 "コンゴ王国の野蛮なマニコンゴは我々の宣教師を鞭打ち、屈辱を与えた！偶像崇拝者たちはキリストを侮辱するだけでなく、我々の力を嘲笑っている。ポルトガルと聖母教会へのこの侮辱に対して、復讐しなければならない。"
@@ -3992,7 +3992,7 @@
  flavor_hab.18.t:0 "オーステンデ会社"
  flavor_hab.18.d:0 "東インドの富は終わりがないように見え、オランダとイングランドは中国とインドの商品をヨーロッパ市場に持ち込むだけで、ますます豊かに成長している。今日、多くのフランダースの商人だけでなく、オランダとイングランドの船長たちが、$MONARCHTITLE$$MONARCH$に接触し、自ら王家の勅許を求めた。彼らは、必要な専門知識と初期の資本をすでに持っていると主張し、彼らが裏切り者や海賊とはみなされずに他のインド企業と競争できるようにするために王家の勅許だけを求めている。引き換えに、会社はオーストリア領ネーデルラントに拠点を置き、我々がインドと中国の富に参加することができるようになるのだ。"
  flavor_hab.18.a:0 "素晴らしい！"
- flavor_hab.18.b:0 "我々は隣国を起こらせる危険を冒すことはできない。"
+ flavor_hab.18.b:0 "我々は隣国を怒らせる危険を冒すことはできない。"
  flavor_hab.19.t:0 "オーステンデ会社の閉鎖の要求"
  flavor_hab.19.d:2 "まだ若い会社ながら、オーステンデ会社は$CAPITAL_CITY$の誰よりも成功している。会社は、旧インド会社のような財政的な力は欠いているかもしれないが、オーステンデ会社はいくつかの分野で非常にうまく対応している。去年はヨーロッパに輸出された紅茶の半分がオーステンデの船で輸送された。\nしかし、会社の成功が、我々を友人にすることはなかった。イングランドとオランダの双方は、オーステンデ会社はオーストリアとフランドルの水兵として偽装された不義な臣民によって作られた偽物であると主張している。彼らは我々がインド交易に参入したいと望んでいることについてほとんど理解を示しておらず、会社が運営している限り、我々に対して抵抗するだろう。$CAPITAL_CITY$では、それに共感している者もおり、我が国は決して海軍力を持ったことがないことを考えれば、これは皆、彼らにとって不必要な冒険のように思える。"
  flavor_hab.19.a:0 "会社を閉鎖する。"
@@ -4046,7 +4046,7 @@
  inc_machu_pichu:0 "マチュピチュ"
  desc_inc_machu_pichu:0 "我々の支配者階級は、並外れています。マチュピチュは、それ自体が小さな都市かつインカ建築の偉大なる実例です。"
  inc_hostage_huacas:0 "偶像ワカ"
- desc_inc_hostage_huacas:0 "我々の統治下の多くの人々によって崇拝された様々な偶像が、我々の首都の一つの家で全部見つかった。ここで偶像は彼らに訪れるかもしれないどんな害からも保護されており、そしてここで崇拝者たちは望むならば、これら偶像を見ることができる。我々の国民の偶像を管理することは、万が一誰が管理しているかを彼らがいずれ忘れること考えると、悪いことではない。"
+ desc_inc_hostage_huacas:0 "我々の統治下の多くの人々によって崇拝された様々な偶像が、我々の首都の一つの家で全部見つかった。ここで偶像は彼らに訪れるかもしれないどんな害からも保護されており、そしてここで崇拝者たちは望むならば、これら偶像を見ることができる。我々の国民の偶像を管理することは、万が一誰が管理しているかを彼らがいずれ忘れることを考えると、悪いことではない。"
  inc_chimu_integration:0 "チムーの慣習の融合"
  desc_inc_chimu_integration:0 "現存するアンデス最古の国家として、チムーの人々は古代の文化の担い手である。彼らの宮廷生活は非常に手が込んでいて、職人たちは非常に熟練しており、行政方法は多くの点で我々より先進的である。したがって我々はできるだけ多くの彼らの文化を我々の文化と融合しようと決めた。これは私たちの行政にある程度の負担をかけるが、別な方法ではできなかったことを成し遂げることを可能にする。"
  inc_no_chimu_soldiers:0 "チムーの非武装化"
