--- a/source/localisation/personalityoptions_l_english.yml
+++ b/source/localisation/personalityoptions_l_english.yml
@@ -160,7 +160,7 @@
  personality_events.5.a:0 "「私がより遠くまで見渡せたとするならば、それは巨人の肩の上に乗っていたからだ」"
  personality_events.5.b:0 "私は我々の時代の偉大な精神で自分を囲むだろう！"
  personality_events.6.t:0 "法律の編纂"
- personality_events.6.d:0 "徹底的な調査と議論の末、[Root.GetName]の[Root.Monarch.GetTitle][Root.Monarch.GetName]は、[Root.GetName]のすべての地方の法律や法律の伝統が、[Root.Monarch.GetHerHis]の作る新しい法律の集まりによって置き換えられる布告を発した。\nこの法律の制定は、我々の王国全体だけでなく、我々の宗教の他の国教の他の国家からの法律学と、来るべき世代の裁判例として機能することが信じられている。"
+ personality_events.6.d:0 "徹底的な調査と議論の末、[Root.GetName]の[Root.Monarch.GetTitle][Root.Monarch.GetName]は、[Root.GetName]のすべての地方の法律や法律の伝統が、[Root.Monarch.GetHerHis]の作る新しい法律の集まりによって置き換えられる布告を発した。\nこの法律の制定は、我々の王国全体だけでなく、我々の宗教を信仰する他の国家の法律学を組み合わせたものであり、来るべき世代の裁判例として機能することが信じられている。"
  personality_events.6.a:0 "誰もが公正な裁判を受ける権利を有する。"
  personality_events.6.b:0 "私はこれに慣れることができる…"
  personality_events.7.t:0 "[Root.Owner.Capital.GetCapitalName]の大論争"
@@ -428,7 +428,7 @@
  personality_events.52.d:0 "[Root.Monarch.GetTitle][Root.Monarch.GetName]の対処は常に容易なものではない。[Root.Monarch.GetHerHis]の軽率な働きかけと完全な裁量の欠如は、長年にわたり、多くの人々を怒らせてきた。しかし、[Root.Monarch.GetName]の洗練さの欠如に感謝している人々の集団もある。[Root.Monarch.GetHerHisCap]の顧問は、我々の[Root.Monarch.GetTitle]が説得しやすく、どのような提案にも興奮することを認識している。彼らはとても満足しているので、我々は彼らの報酬をいくらか引き下げることができた。それはあたかも、我々が後ろに並んで待つ輝かしい後継者を持っていないようには思えない！"
  personality_events.52.a:0 "ちょっとした競争は、彼らをより懸命に働かせるだけだ！"
  naive_employer:0 "純真な雇用者"
- desc_naive_employer:0 "我が国の支配者は興奮しやすく、新しいアイデアをほとんど試してみたいと思っており、顧問の間で人気がある。"
+ desc_naive_employer:0 "我が国の支配者は興奮しやすく、新しいアイデアのほとんどを試してみたいと思っており、顧問の間で人気がある。"
  personality_events.53.t:0 "[Root.Monarch.GetHerHisCap]の性格によって守られた"
  personality_events.53.d:0 "これは言いすぎだが、我々は[assassination_nation.GetName]の[assassination_nation.Monarch.GetTitle][assassination_nation.Monarch.GetName]の悪党たちから他に何を予想できただろう？昨晩、[Root.Monarch.GetTitle][Root.Monarch.GetName]は、[Root.Monarch.GetHerHis]の際どいところで暗殺の試みから生き延びた。我々は今回に限り、[Root.Monarch.GetHerHis]の浮気な性格に感謝しており、それがなければ、毒の塗られた短剣は確実にその目標を見つけていただろう。警備兵は犯人を捕まえることができ、我々の尋問者からの刺激を受け、我々は誰を非難すべきか​​正確に分かっている…"
  personality_events.53.a:0 "背後から短剣だと？我々はこの侮辱を軽く取ることはないだろう！"
@@ -639,7 +639,7 @@
  desc_infertile_personality:0 "この支配者は弱い生殖力しか持たない。どうしようもない理由があり、後継者を儲けることは大抵のことと比べて苦労するようだ。"
  desc_drunkard_personality:0 "この支配者は逸楽である。常に一般的な無関心からの救いを求める我々の支配者は、アルコールのような多くの刺激に溺れている。逸楽な支配者を持つことは、国家全体を貧弱に映し出している。"
  desc_sinner_personality:0 "この支配者は広く罪人とみなされている。我が国の指導力における個人的な欠点は、宗教施設を我々に敵対するものへと変えた。"
- desc_greedy_personality:0 "この支配者は貪欲である。国家の歳入は、収入を増やすためなら何でもする我らの支配者の下で、無慈悲で近視眼的に増加していきます。この短期視点による行動の長期的な効果により、全ての歳入源を壊すか損なうかして、税収は大幅に減少する。"
+ desc_greedy_personality:0 "この支配者は貪欲である。国家の歳入は、収入を増やすためなら何でもする我らの支配者の下で、無慈悲で近視眼的に増加していく。この短期視点による行動の長期的な効果により、全ての歳入源を壊すか損なうかして、税収は大幅に減少する。"
  desc_cruel_personality:0 "この支配者は残酷であると考えられている。我々の支配者による恣意的で残酷な行為に関する広範な話は、我々の国民の多くを大きく怒らせた。これは反乱自体を誘発するには十分ではないかもしれないが、誰もが反乱への理由を欠いていないことで、あらゆる危機において世論に厳しい打撃となるだろう。"
  desc_naive_personality:0 "この支配者は熱意あふれる世間知らずである。その浅はかで猪突猛進とも言える性格により、隣人達に罪や侮辱を許されるには通常よりも時間がかかる。"
  desc_craven_personality:0 "この支配者は臆病である。物理的な戦闘を必死に恐れている我々の支配者は、戦場からできるだけ遠くにとどまっている。我々の軍隊は、彼らが自分たちの上にいることを認識することはできない。"
