--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -192,7 +192,7 @@
  devoutness:0 "信心"
  devoutness_desc:0 "宗教は、我々の支配にとって最も重要な防波堤の一つである。人々の前で支配者が信心深さを示すことで、支配されている人はそれに従うだろう。人々の間で信心深さが高まることは我々の支配を強化することになる。"
  religious_tradition:0 "宗教的伝統"
- religious_tradition_desc:0 "我々の信仰の強さと崇拝と礼拝の一般公開は、遠近問わず様々な土地の人々から賞賛されている。  これは我々の国土への威信と栄光を映し出している。"
+ religious_tradition_desc:0 "我々の信仰の強さと崇拝と礼拝の一般公開は、遠近問わず様々な土地の人々から賞賛されている。これは我々の国土への威信と栄光を映し出している。"
  ecumenism:0 "世界教会主義"
  ecumenism_desc:0 "国内の異端者を扱う方法の問題は、常に困難が付きまとう。 昔ながらの火と剣による手法は、最終的にはほとんどの問題を解決し、外交も成功することができる。様々な宗派間の対話を奨励することで、誤解を減らし、平和を促進することができる。"
  spy_ideas:0 "諜報アイデア"
@@ -470,7 +470,7 @@
  life_long_conscription:0 "一生の兵役"
  life_long_conscription_desc:0 "絶えず成長する軍隊を供給するためには、終生の関与となるように、兵役期間を拡張する必要がある。これは、そうでなければ劣った職業での生活を導くであろう人々に社会移動を生じさせ、我が帝国の試みのための頼もしい兵士の源泉を与えるであろう。"
  russian_artillery_yard:0 "ロシアの砲兵工廠"
- russian_artillery_yard_desc:1 "優れた火力は今の攻囲とこれからの激戦を決定するものである。我々は、軍隊が大砲も弾薬もないことが決して起きないようにするため、我が国の中心に最先端の砲兵工廠を建設せねばならない。"
+ russian_artillery_yard_desc:1 "優れた火力は今の攻囲とこれからの激戦を決定するものである。我々は、軍隊に大砲も弾薬もないというような事態が決して起きないよう、我が国の中心に最先端の砲兵工廠を建設せねばならない。"
  sudebnik:0 "スジェーブニク"
  sudebnik_desc:0 "15世紀後半には、元は広範囲の多様性を持った慣習法であった統治規定を規則化するという決断が行われた。規定を合理化し、罰金を課すことができる罪の数を増やすことにより、行政と収入を向上させる。"
  the_streltsy:0 "ストレリツィの創設"
@@ -480,7 +480,7 @@
  abolish_the_mestnichestvo:0 "門地制の廃止"
  abolish_the_mestnichestvo_desc:0 "門地制は、血統がどのように古いかに基づいて人に国家職を提供せねばならないことを述べる古代の制度であった。これは、候補者の適性を考慮してないため、問題であった。この制度の廃止は、能力に基づき任命を許可することにより、国の官僚制を改善する。"
  siberian_frontier:0 "シベリア開拓"
- siberian_frontier_desc:0 "シベリアの遠くの荒地が我々を呼んでいる。そこへ道をきれいにし、コサックを出発させ、ロシア国民のための土地をもたらせねばならない。"
+ siberian_frontier_desc:0 "シベリアの遠くの荒地が我々を呼んでいる。そこへの道をきれいにし、コサックを出発させ、ロシア国民のための土地をもたらせねばならない。"
  table_of_ranks:0 "序列表"
  table_of_ranks_desc:0 "門地制の廃止は国家の官僚主義をより能力主義とする最初の動きであった。序列表はこれを成文化し、軍隊の軍務と昇進を下位の階級での功績による条件とした。"
  curriculum_of_the_cadet_corps:0 "軍幼年学校課程の拡張"
@@ -573,7 +573,7 @@
  tulip_period:0 "チューリップ時代"
  tulip_period_desc:0 "チューリップに象徴された時代（1718～1730）は、初めてトルコ語の印刷機と、産業と商業の促進する一連の改革が見られた革新の時代を象徴した。"
  imperial_school_of_naval_engineering:0 "帝立造船技術学校の創設"
- imperial_school_of_naval_engineering_desc:0 "1773年に創立され、それの目標は沿岸を守るより先進的な艦隊をオスマン帝国に提供することであった。"
+ imperial_school_of_naval_engineering_desc:0 "1773年に創立され、その目標は沿岸を守るより先進的な艦隊をオスマン帝国に提供することであった。"
  VEN_ideas:0 "ヴェネツィアのアイデア"
  VEN_ideas_start:0 "ヴェネツィアの伝統"
  VEN_ideas_bonus:0 "ヴェネツィアの宿願"
@@ -646,7 +646,7 @@
  HAB_ideas_start:0 "オーストリアの伝統"
  HAB_ideas_bonus:0 "オーストリアの宿願"
  imperial_ambitions:0 "帝国の野望"
- imperial_ambitions_desc:0 "1250年のホーエンシュタウフェン家の落日に伴い、帝国は混沌へと陥り、1356年の金印勅書は国体制定の呼び掛けによって、無政府状態を法律化した。しかしながら、1438年に帝国の称号はオーストリアをその力の根源とする最も貴きハプスブルク家によってまた獲得された。オーストリアはこの称号を保持し続け、この帝国を改革し、神聖にして、ローマな、帝国へと今再び戻さなくてはならない。"
+ imperial_ambitions_desc:0 "1250年のホーエンシュタウフェン家の落日に伴い、帝国は混沌へと陥り、1356年の金印勅書は国体制定の呼び掛けによって、無政府状態を法律化した。しかしながら、1438年に帝国の称号はオーストリアをその力の根源とする最も貴きハプスブルク家によってまた獲得された。オーストリアはこの称号を保持し続け、この帝国を改革し、神聖にして、ローマ的な帝国へと今再び戻さなくてはならない。"
  military_border:0 "軍政国境地帯"
  military_border_desc:0 "我々の国境の防衛は、それを実行する方法ではなく、それを支払う方法において深刻な問題である。我々が打ち出した解決策は、専門的な軍事階級を築くために、国境地域で気前よく土地を付与するというものである。これにより、我々の国境が適切な価格で適切に保護されていることが保証されるだけでなく、これらの兵士たちを他の業務にも利用できるようになる。"
  fugger_banks:0 "フッガー銀行"
@@ -654,7 +654,7 @@
  habsburg_dominance:0 "ハプスブルクの優越"
  habsburg_dominance_desc:0 "戦いは他の者に任せよ、汝幸いなるオーストリアよ、結婚せよ！"
  edict_of_restitution:0 "復旧令"
- edict_of_restitution_desc:0 "我々の証聖者ウィリアム・ラモマイニは、我々の国家の宗教問題を整理することを小著で忠告している。そこに不都合はないので、我々は、この小規模な勅令を下した方が良いかもしれません。"
+ edict_of_restitution_desc:0 "我々の証聖者ウィリアム・ラモマイニは、我々の国家の宗教問題を整理することを小著で忠告している。そこに不都合はないので、我々は、この小規模な勅令を下した方が良いかもしれない。"
  austrian_court:0 "オーストリアの宮廷"
  austrian_court_desc:0 "理論的には我々がより多くの外交関係を持つのを止めるものは何もないが、それらを維持するには時間と労力が必要である。我々の宮廷を合理化することにより、我々はそれらが発生したときに、それを円滑に行うために必要な情報を確実に得ることができる。"
  hofkriegsrat:0 "宮廷軍事局"
@@ -709,7 +709,7 @@
  promotion_of_irrigation:0 "灌漑技術の促進"
  promotion_of_irrigation_desc:0 "農業を奨励すれば人口は増加し、軍隊の人的資源はより多くなるだろう。"
  increased_crown_lands:0 "王冠領の拡大"
- increased_crown_lands_desc:0 "我が国の歳入の大部分は農業からの収入から来ている。何年にもわたって、王領地は報酬として、忠実なる家臣に渡されてきた。だが、今や我が国が強力であり続けるために、これらの土地を戻す時であろう。"
+ increased_crown_lands_desc:0 "我が国の歳入の大部分は農業からの収入である。何年にもわたって、王領地は報酬として、忠実なる家臣に渡されてきた。だが、今や我が国が強力であり続けるために、これらの土地を戻す時であろう。"
  BUR_Ideas:0 "ブルゴーニュのアイデア"
  BUR_Ideas_start:0 "ブルゴーニュの伝統"
  BUR_Ideas_bonus:0 "ブルゴーニュの宿願"
@@ -937,7 +937,7 @@
  repopulation_of_countryside:0 "辺境の人口回復"
  repopulation_of_countryside_desc:0 "疫病、戦争、そして内戦によって辺境は犠牲を出し続け、荒廃し、そうして住むに値しなくなった。我等は入植者を辺境に住まわせ、軍隊の基礎としてそれを再建する必要がある。"
  byz_state_admin_reform:0 "国家統治の改革"
- byz_state_admin_reform_desc:0 "我が国の行政機構は過去の遺物に過ぎず、その全面的な刷新を以て新時代に備える必要がある。税制から初めて、利益を以て昇進した政府の雇用者を使う現在の体制を改めれば、農民にこれ以上負担を強いることなく金銭をもたらすだろう。"
+ byz_state_admin_reform_desc:0 "我が国の行政機構は過去の遺物に過ぎず、その全面的な刷新を以て新時代に備える必要がある。税制から始めて、利益を以て昇進した政府の雇用者を使う現在の体制を改めれば、農民にこれ以上負担を強いることなく金銭をもたらすだろう。"
  byz_admin_power:0 "権限の委譲"
  byz_admin_power_desc:0 "我が国の体制における最大の弱点とは皇帝の果たす役割である。専制且つ半神聖なる皇帝は内戦を助長するほどに権力を有している。もっと権限の委譲を図ることで、その地位の価値を低下させ、内戦の危機を減らし、貴族を彼らが権力を奮わんとする体制内へと取り込めるだろう。"
  merchant_class:0 "ビザンツ商人団"
@@ -1247,7 +1247,7 @@
  traditions_of_the_great_khan:0 "偉大なハンの伝統"
  traditions_of_the_great_khan_desc:0 "偉大なハンは、彼の騎兵の恐怖と彼の強い野望により世界を震え上がらせた。これらの伝統を取り戻し、我々も軍隊を世界が震え上がるようなものとしなければならない。"
  tradition_of_conquest:0 "征服の伝統"
- tradition_of_conquest_desc:0 "人々を征服するのは難しい任務であり、誰もが我々の啓蒙された政府への準備ができているわけではない。それでも、我々は人々を我々の帝国に連れて来るため、蓋骨の山を築くよりも簡単な方法があることを発見した。それは、我々の祖先が決して学ぶことのなかったものだ。"
+ tradition_of_conquest_desc:0 "人々を征服するのは難しい任務であり、誰もが我々の啓蒙された政府への準備ができているわけではない。それでも、我々は人々を我々の帝国に連れて来るため、骸骨の山を築くよりも簡単な方法があることを発見した。それは、我々の祖先が決して学ぶことのなかったものだ。"
  logistics_of_khan:0 "ハンの兵站"
  logistics_of_khan_desc:0 "偉大なハンの征服が、優れた軍事力によるものであると同様、優れた兵站によるものであったことは忘れられている。我々は時代に合わせて最新のものとしながら、偉大なハンの技術を見習う必要がある。これにより、我々の征服の範囲が広がるだろう。"
  glory_of_conquest:0 "征服の栄光"
@@ -1325,7 +1325,7 @@
  mandala_system:0 "曼荼羅制度"
  mandala_system_desc:0 "東南アジアにおける主従関係は、「曼荼羅」、円として定義されている。宗主が中心地から国を支配している間、従属者はより大きな独立性を持つであろう。我々と間の個人的関係が良いのであれば、属国は我々に貢物を払い、戦時に人を提供し我々を助けるであろう。"
  nat_worship:0 "ナッ信仰"
- nat_worship_desc:0 "ナッは、よく仏教の修行とあわせて崇敬されるビルマ人の精霊です。特に農村地域で37の偉大なナッとその他の小さな精霊が崇拝されている。この普及した宗教的慣習は、多様な属国と共に一体にする。"
+ nat_worship_desc:0 "ナッは、よく仏教の修行とあわせて崇敬されるビルマ人の精霊である。特に農村地域で37の偉大なナッとその他の小さな精霊が崇拝されている。この普及した宗教的慣習は、多様な属国と共に一体にする。"
  bayingyi:0 "バインジー"
  bayingyi_desc:0 "ヨーロッパ人が我が国土に現れ始めた。我々が彼らに土地を分与すれば、彼ら「バインジー」は我が軍隊の兵隊として我らに仕えてくれるであろう。"
  chakravartin:0 "転輪聖王"
@@ -1931,7 +1931,7 @@
  warriors_unity:0 "戦士の結束"
  warriors_unity_desc:0 "我々は数の点で最大の部族ではないかもしれないが、我々の強力な部族の構造によって、他にはないものがある。それは結束だ！我々の戦士たちは兄弟として戦い、戦いの場に共に立つ。我々がこの伝統を維持する限り、我々は敗北することはないだろう！"
  the_four_kings:0 "四人の王"
- the_four_kings_desc:0 "我々は、友人や同盟国の遠く離れた故郷に訪ね、友情を強化するため、我々の族長の一部を代表として派遣するべきだ。"
+ the_four_kings_desc:0 "我々は、友人や同盟国の遠く離れた故郷を訪ね、友情を強化するため、我々の族長の一部を代表として派遣するべきだ。"
  CHICK_ideas:0 "チカソーのアイデア"
  CHICK_ideas_start:0 "チカソーの伝統"
  CHICK_ideas_bonus:0 "チカソーの宿願"
@@ -2004,7 +2004,7 @@
  cultural_ties:0 "文化的連帯"
  cultural_ties_desc:0 "異なる文化は異なる風習を持ち、それ故風習を変えよと述べる上からの試みに抵抗する傾向がある。我らは地方の指導者を統治機構に取り込むことでこの弱みを強みへと変え、我らの意思を彼らが納得するやり方で遂げさせるのだ。"
  benevolence:0 "慈悲"
- benevolence_desc:0 "我が国は寛容と啓蒙の砦である。他国がこのことを知ったのならば、海外とのより良き関係を望めるだろう。"
+ benevolence_desc:0 "我が国は寛容と啓蒙の砦である。他国がこのことを知れば、海外とのより良き関係を望めるだろう。"
  influence_ideas:0 "権勢アイデア"
  influence_ideas_bonus:0 "完成した権勢アイデア"
  establish_cadet_branches:0 "分家の設立"
@@ -2059,7 +2059,7 @@
  raiding_the_plains_central_indic:0 "低地への襲撃"
  raiding_the_plains_central_indic_desc:0 "我らの砦は、侵略者から安全を保つだけではなく、交易隊商や平原都市に攻撃を仕掛ける拠点としても優れている。敵を騙したり待ち伏せたりするための領土の知識を利用することにより、他の方法を取った場合よりも、より強力な敵を倒すことができるであろう。"
  ancient_roots_central_indic:0 "古代の起源"
- ancient_roots_central_indic_desc:0 "我々はインドの大都市の国際的な宮廷の盛大な儀礼をもってはいないであろうが、独自の王権の伝統を持っている。これらの伝統の中には、トリプラのハイハヤスやバーラースルのナーガ王のようなこれらの土地で我らの前にあった由緒ある王国にまで確実に遡る。\n伝統の中には新しきものの中にあるのと同じように強さがある。我が優雅な伝統は国民に尊敬を起こさせ、単に外国の高官達を奇を楽にさせてあげるだけではない。"
+ ancient_roots_central_indic_desc:0 "我々はインドの大都市の国際的な宮廷の盛大な儀礼をもってはいないであろうが、独自の王権の伝統を持っている。これらの伝統の中には、トリプラのハイハヤスやバーラースルのナーガ王のようなこれらの土地で我らの前にあった由緒ある王国にまで確実に遡る。\n伝統の中には新しきものの中にあるのと同じように強さがある。我が優雅な伝統は国民に尊敬を起こさせ、単に外国の高官達を気楽にさせてやるだけではない。"
  formalize_relations_with_cheifs_central_indic:0 "酋長との関係の正式化"
  formalize_relations_with_cheifs_central_indic_desc:0 "我々は領土内の砦を管理する多くの酋長の尊敬と忠誠を起こさせているが、個人的忠誠心をより正式な関係に切り替える時である。酋長達が完全により直接的に国家に縛られ、その義務を認める時、我々は税を取ることと彼らを支配することの両方に関して、非常に苦労しなくなるであろう。"
  PRO_ideas:0 "プロヴァンスのアイデア"
@@ -2068,7 +2068,7 @@
  memory_of_angevin_claims:0 "アンジュー家の相続権"
  memory_of_angevin_claims_desc:0 "13世紀におけるキリスト教世界支配というホーエンシュタウフェン家の野望の崩壊後、1264年にウルバン4世聖下は賢くもナポリ・シチリア両王の称号をホーエンシュタウフェンの保有する爵位より取り消し、代わって我らの先祖であり、既に自身の勲功によりアルバニア王の称号を保持していた、アンジューのシャルルに授けられた。不実なるアラゴン人はホーエンシュタウフェンの家系に連なる自身の婚姻を見つけ出し、1282年に我等からシチリアを盗み、最近には1442年に我等のルネ良王から「ナポリ王」の称号を横領して教皇への冒涜を済ませた。アンジューのシャルルの遺産は彼方の者となったが、我らは祖先の広大なる所有地を覚えており、彼らの請求権はアルバニアやイェルサレムにまで至るのだ。"
  revive_house_of_anjou:0 "アンジュー家の復興"
- revive_house_of_anjou_desc:0 "アンジューの家の上位の血統は1435年、ナポリ女王ジョヴァンナ2世が死去した時に断絶した。我々の新たな血統である、ヴァロワ＝アンジュー家、フランスの二つの偉大な家の統合に万歳！ 二つの王朝の融合を通じて、王室のユーグ・カペーの血が再び繰り返される。少しの作業と計画により、我々のアンジュー帝国の祖先たちの邪悪な王座の奪取と、ヴァロワの祖先の軍事的な勇気は、ヴァロワ＝アンジュー家を結束させ、一方よりもより偉大なものにすることができる。"
+ revive_house_of_anjou_desc:0 "アンジューの家の上位の血統は1435年、ナポリ女王ジョヴァンナ2世が死去した時に断絶した。我々の新たな血統である、ヴァロワ＝アンジュー家、フランスの二つの偉大な家の統合に万歳！二つの王朝の融合を通じて、王室のユーグ・カペーの血が再び繰り返される。少しの作業と計画により、我々のアンジュー帝国の祖先たちの邪悪な王座の奪取と、ヴァロワの祖先の軍事的な勇気は、ヴァロワ＝アンジュー家を結束させ、一方よりもより偉大なものにすることができる。"
  composite_monarchy:0 "複合君主制"
  composite_monarchy_desc:0 "複合君主制は、一つの王冠の下で統一しているにもかかわらず、それぞれの法的規範と伝統によって統治される異なる部分を含んだ王国に対する専門用語である。 アンジュー帝国の領土について、これ以上に適切な語句があるだろうか？かつて、一族はアンジューからアルバニアまでの土地を統治しなければならなかった。今日、我々の手の届く範囲はやや狭いかもしれないが、ロレーヌ公爵、バル公爵、アンジュー公爵、そしてプロヴァンス伯爵の義務は、それらのすべての称号が同じ人物によって保持されている場合でさえも、かなり異なっている。さまざまな領土を一つの共通の目標に対して柔軟に対応させることで、我々は国民をなだめ、その部分の合計よりはるかに偉大な全体を形成する。"
  tarascon_castle:0 "タラスコンの城"
@@ -2448,7 +2448,7 @@
  mon_idea_5:0 "海の呼び声"
  mon_idea_5_desc:0 "重要な海岸線を持つことは、様々なモンテネグロ国家の人々がより大きな地中海とヨーロッパ社会の一部であることを常に示してきた。交易、商取引、アイデアはすべて海から来て、経験豊富な船員によって母国に持ち込まれることが知られている。"
  mon_idea_6:0 "税制改革"
- mon_idea_6_desc:0 "歴史の中で、我々の氏族は、主にその日の実際の必要性に基づいて、税を徴収するその場しのぎの制度に頼ってきた。しかし、我々の国家が真に近代ヨーロッパ諸国の一族に加わるのであれば、我々は税制を改革し、より信頼でき公平な課税を行わなければならない。"
+ mon_idea_6_desc:0 "歴史の中で、我々の氏族は、主にその日の実際の必要性に基づいて、税を徴収するその場しのぎの制度に頼ってきた。しかし、我々の国家が真に近代ヨーロッパ諸国の一族に加わるのであれば、我々は税制を改革し、より信頼できる公平な課税を行わなければならない。"
  mon_idea_7:0 "尊厳と勇気"
  mon_idea_7_desc:0 "モンテネグロ社会の最高の道徳的な写本は、あらゆる事柄における人間の行動の究極を指示している。そう、規範、慈愛と勇敢な武勇だ。我々の社会に深く根差していることで、それは、我々の民にとって栄誉、勇気、熱意の大きな源泉であり、恐れたり、戦場から逃げ出したり、あるいはひるんだりすることは決してなく、代わりに、彼らが強力かもしれない場合であっても、常に敵に対峙する。"
  RMN_ideas:0 "ルーマニアのアイデア"
@@ -2669,7 +2669,7 @@
  chm_idea_5:0 "職人の配置転換"
  chm_idea_5_desc:0 "我々の征服された土地は首都よりも優れた職人と賢明な人材を持つべきではない。帝国の最も偉大な手と精神は、我々に直接奉仕するため、チャン・チャンにもたらされるべきである。"
  chm_idea_6:0 "経済への特化"
- chm_idea_6_desc:0 "我々の帝国が成長するにつれて、それぞれの村に必要なものすてについて、帝国の間のすべての富を再配分し、そして最高の物を生み出す場所ですべてを生産する制度へと変える必要がある。"
+ chm_idea_6_desc:0 "我々の帝国が成長するにつれて、それぞれの村に必要なものすべてについて、帝国の間のすべての富を再配分し、そして最高の物を生み出す場所ですべてを生産する制度へと変える必要がある。"
  chm_idea_7:0 "ミタ制"
  chm_idea_7_desc:0 "我々の人々がかつて戦った儀式的な戦いは過去のものだ。今は大規模な軍隊による征服の時代だ。すべての人が王に対し義務と労働を負わなければならないことを宣言することにより、我々は軍隊への奉仕を強制することができる。"
  MCA_ideas:0 "ムイスカのアイデア"
