--- a/source/localisation/tutorial_l_english.yml
+++ b/source/localisation/tutorial_l_english.yml
@@ -307,7 +307,7 @@
  TUT_CAM_CHAPTER02_PAGE08_TEXT:0 "反乱軍には様々な種類があり、その派閥はそれぞれ異なる主張を持ちます。州の§M不穏度§!が反乱の発生確率を決定します。対処方法として、戦闘で§M反乱軍を討伐する§!か、§M安定度と拡張§!タブから交渉を行うかを選ぶことができます。\n\n§Y一時停止の解除をお忘れなく。§!"
  TUT_CAM_CHAPTER02_PAGE08_OBJECTIVES:0 "§M反乱軍を討伐§!してください。"
  TUT_CAM_CHAPTER02_PAGE09_TITLE:0 "§Y安定度（9/19）§!"
- TUT_CAM_CHAPTER02_PAGE09_TEXT:0 "安定度は国家がどの程度安定しているかを表します。安定度は§M不穏度§!、§M税収§!、§M世界交易力§!、その他多くに関係してきます。安定度は§M安定度と拡張タブ§!から§M統治力§!を消費することで増加させられます。\n\n§Y左上の盾形をクリックし、§M安定度と拡張§Yタブを開き、安定性の下にある§M高める§!ボタンをクリックしてください。"
+ TUT_CAM_CHAPTER02_PAGE09_TEXT:0 "安定度は国家がどの程度安定しているかを表します。安定度は§M不穏度§!、§M税収§!、§M世界交易力§!、その他多くに関係してきます。安定度は§M安定度と拡張タブ§!から§M統治力§!を消費することで増加させられます。\n\n§Y左上の盾形をクリックし、§M安定度と拡張§Yタブを開き、安定度の下にある§M高める§!ボタンをクリックしてください。"
  TUT_CAM_CHAPTER02_PAGE09_OBJECTIVES:0 "§M安定度を高め§!てください。"
  TUT_CAM_CHAPTER02_PAGE10_TITLE:0 "§Y王室間の婚姻（10/19）§!"
  TUT_CAM_CHAPTER02_PAGE10_TEXT:0 "王室間の婚姻は自国と他国の間で絆を結ぶ方法の一つです。\n\n§Yユニットを選択していない状態で§Mポルトガル§!の州を右クリックし、彼らとの外交画面を開いてください。§M王室行動§!の折畳をクリックし、§M王室間の婚姻§!オプションを表示してください。\n\n一時停止の解除をお忘れなく。§W"
