--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -45,7 +45,7 @@
  native_council_ruler_female:0 "酋長"
  st_lawrence:0 "セントローレンス湾"
  laplata:0 "リオ・デ・ラ・プラタ"
- ACCESS_DEPEND:0 "密接な関係を持っている、あるいは宗主国が同じ場合は特に軍事通行権を必要としない"
+ ACCESS_DEPEND:0 "密接な関係を持っている、あるいは宗主国が同じ場合は特に軍事通行権を必要としない。"
  ACCESS_OVERLORDS_OVERLORD:0 "国の宗主国の宗主国は、特定の通行権を必要としません。"
  DIPLO_COLONY_NATION:0 "植民地国家："
  COLONINAL_NATION_GROWTH_IMPACT:0 "植民地国家：§Rx$VAL$§!\n"
@@ -83,7 +83,7 @@
  alert_high_liberty_desire_instant:0 "§Y従属国の独立欲求が高い§!"
  alert_high_liberty_desire_delayed:0 "$LIST$\n従属国の一つで独立欲求が$LIMIT|Y0$以上になると、彼らは不忠になり、独立戦争を宣言する可能性があります。"
  WHO_LIBERTY_DESIRE:0 "$WHO|Y$の独立欲求：§Y$VAL$%§!"
- FEDERATION_NEEDS_GOOD_OPINION:0 "連邦の盟主国は新たな参加希望国に対する肯定的な意見を持っている必要がある。"
+ FEDERATION_NEEDS_GOOD_OPINION:0 "連邦の盟主国は新たな参加希望国に対する肯定的な評価を持っている必要がある。"
  MIGRATE_REASON_NOT_NEIGHBOR:0 "隣接する州が存在しない。"
  MIGRATE_REASON_NOT_DISCOVERED:0 "未発見の州に移動はできない。"
  MIGRATE_REASON_NO_PROVINCES:0 "隣接する移動可能な州がない。"
